--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <title></title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link href="css/style.css" rel="stylesheet">
   <script src="js/dark-mode.js"></script>
 </head>
 
 <body>
-
+  <span class="material-symbols-outlined">
+    dark_mode
+  </span>
 </body>
 
 </html>
