--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
+
   <link href="css/style.css" rel="stylesheet">
   <script src="js/dark-mode.js"></script>
 </head>
 
 <body>
-  <span class="material-symbols-outlined">
-    dark_mode
-  </span>
+  <div class="dark-mode-box">
+    <div class="dark-mode-page-text">
+      <h1>Dark Mode Page</h1>
+    </div>
+    <span class="material-symbols-outlined">
+      dark_mode
+    </span>
+  </div>
+
 </body>
 
 </html>
